2017-03-17  Björn Freise  <mcfreis@gmx.net>

	Added methods for setting and getting the curves used during negotiation and encryption

	* dtls/openssl.py:
		- Added SSL_CTX_set1_curves() and SSL_CTX_set1_curves_list()
		- Added SSL_CTX_set_ecdh_auto() and SSL_CTX_set_tmp_ecdh()
		- Added SSL_get1_curves(), SSL_get_shared_curve(), SSL_set1_curves() and SSL_set1_curves_list()

2017-03-17  Björn Freise  <mcfreis@gmx.net>

	Added methods for setting the signature algorithms

	* dtls/openssl.py:
		- Added SSL_CTX_set1_client_sigalgs_list(), SSL_CTX_set1_client_sigalgs(), SSL_CTX_set1_sigalgs_list() and SSL_CTX_set1_sigalgs()
		- Added SSL_set1_client_sigalgs_list(), SSL_set1_client_sigalgs(), SSL_set1_sigalgs_list() and SSL_set1_sigalgs()

2017-03-17  Björn Freise  <mcfreis@gmx.net>

	Added method SSL_CTX_build_cert_chain()

	* dtls/openssl.py: Added SSL_CTX_build_cert_chain() and corresponding constants

2017-03-17  Björn Freise  <mcfreis@gmx.net>

	Added methods *_clear_options() and *_get_options()

	* dtls/openssl.py:
		- Added SSL_CTX_clear_options() and SSL_CTX_get_options()
		- Added SSL_clear_options() and SSL_get_options()

2017-03-17  Björn Freise  <mcfreis@gmx.net>

	Added new methods for DTLSv1.2

	* dtls/err.py: Added error code ERR_WRONG_VERSION_NUMBER
	* dtls/openssl.py: Added DTLS_server_method(), DTLSv1_2_server_method() and DTLSv1_2_client_method()
	* dtls/patch.py: Default protocol DTLS for ssl.wrap_socket() and ssl.SSLSocket()
	* dtls/sslconnection.py:
		- Introduced PROTOCOL_DTLSv1_2 and PROTOCOL_DTLS (the latter one is a synonym for the "higher" version)
		- Updated _init_client() and _init_server() with the new protocol methods
		- Default protocol DTLS for SSLConnection()
		- Return on ERR_WRONG_VERSION_NUMBER if client and server cannot agree on protocol version
	* dtls/test/unit.py:
		- Extended test_get_server_certificate() to iterate over the different protocol combinations